# callimachus

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL.md  README.md
.github/workflows/: ci.yml  release.yml
Formula/: callimachus.rb
crates/adapters/callimachus-adapter-book/: Cargo.toml
crates/adapters/callimachus-adapter-book/src/: adapter.rs  chunker.rs  extractor.rs  lib.rs  resolver.rs  summarizer.rs
crates/adapters/callimachus-adapter-book/tests/: book_adapter.rs
crates/adapters/callimachus-adapter-book/tests/fixtures/: tale_excerpt.txt
crates/adapters/callimachus-adapter-code/: Cargo.toml
crates/adapters/callimachus-adapter-code/src/: adapter.rs  chunker.rs  contracts.rs  extractor.rs  git.rs  languages.rs  lib.rs  summarizer.rs  vue.rs
crates/adapters/callimachus-adapter-code/tests/: code_adapter.rs  contract_extraction.rs  contracts.rs
crates/adapters/callimachus-adapter-code/tests/fixtures/: contract_sample.rs
crates/adapters/callimachus-adapter-code/tests/fixtures/sample_project/: config.yaml
crates/adapters/callimachus-adapter-code/tests/fixtures/sample_project/src/: lib.rs  main.rs  utils.rs
crates/adapters/callimachus-adapter-docs/: Cargo.toml
crates/adapters/callimachus-adapter-docs/src/: adapter.rs  chunker.rs  docc.rs  extractor.rs  lib.rs  render.rs  summarizer.rs
crates/adapters/callimachus-adapter-docs/tests/: adapter_smoke.rs
crates/adapters/callimachus-adapter-docs/tests/fixtures/AppKit/: NSStackView.json  NSView-tag.json  NSView.json
crates/adapters/callimachus-adapter-wiki/: Cargo.toml
crates/adapters/callimachus-adapter-wiki/src/: adapter.rs  chunker.rs  extractor.rs  lib.rs  links.rs  summarizer.rs
crates/adapters/callimachus-adapter-wiki/tests/: wiki_adapter.rs  wiki_embed_integration.rs
crates/adapters/callimachus-adapter-wiki/tests/fixtures/sample_wiki/: characters.md  index.md  places.md
crates/callimachus-cli/: Cargo.toml
crates/callimachus-cli/src/: config.rs  main.rs  output.rs
crates/callimachus-cli/src/commands/: collection.rs  corpus.rs  correct.rs  export.rs  history.rs  index.rs  ingest.rs  inspect.rs  link.rs  mcp.rs  mod.rs  pinakes.rs  reindex.rs  serve.rs  status.rs  upgrade.rs  watch.rs
crates/callimachus-core/: Cargo.toml
crates/callimachus-core/migrations/: 001_initial.sql  002_fts.sql  003_embeddings.sql  004_libraries.sql  005_collections.sql  006_contracts_themes.sql  007_pipeline_version.sql  008_kind_taxonomy.sql  009_change_manifest.sql  010_multi_model_artifacts.sql  011_scholia.sql  012_provenance_and_history.sql  013_honest_provenance.sql  014_backfill_cursor.sql  015_drop_legacy_version_columns.sql
crates/callimachus-core/src/: error.rs  lib.rs
crates/callimachus-core/src/adapter/: contract.rs  mod.rs  registry.rs
crates/callimachus-core/src/corrections/: engine.rs  mod.rs  types.rs
crates/callimachus-core/src/indexing/: aliases_pass.rs  cascade.rs  change_detector.rs  change_manifest.rs  chunk_pass.rs  contract_pass.rs  embed_pass.rs  file_shape.rs  history_layer.rs  history_pass.rs  history_walk.rs  layer2_cache.rs  mod.rs  model_tier.rs  pipeline.rs  purpose_pass.rs  reindex_pass.rs  semantic_pass.rs  structure_pass.rs  summarize_pass.rs  theme_pass.rs  watcher.rs
crates/callimachus-core/src/query/: collection_service.rs  mod.rs  search.rs  service.rs  types.rs
crates/callimachus-core/src/storage/: ancestry.rs  backend.rs  backfill.rs  block_store.rs  chunk_store.rs  collection_store.rs  contract_store.rs  corpus_store.rs  correction_store.rs  db.rs  edge_store.rs  embedding_store.rs  entity_store.rs  fts.rs  history.rs  mod.rs  postgres.rs  pruning.rs  purpose_store.rs  run_log.rs  sqlite.rs  sqlite_graph.rs  summary_store.rs  theme_store.rs  virtual_head.rs
crates/callimachus-core/src/types/: block.rs  chunk.rs  collection.rs  contract.rs  corpus.rs  edge.rs  entity.rs  location.rs  mod.rs  pass.rs  provenance.rs  purpose.rs  result.rs  scope.rs  summary.rs  theme.rs
crates/callimachus-core/tests/: honest_provenance_backend.rs  honest_provenance_convergence.rs  honest_provenance_migration.rs  honest_provenance_types.rs  layer2_cache.rs  multi_model_artifacts.rs  passes_flag_walk.rs  phase12_pipeline.rs  reindex_integration.rs  scholia_migration.rs  theme_authoritative_writer.rs
crates/callimachus-http/: Cargo.toml
crates/callimachus-http/src/: error.rs  handlers.rs  lib.rs  router.rs
crates/callimachus-llm/: Cargo.toml
crates/callimachus-llm/src/: anthropic.rs  budget.rs  claude_code.rs  concurrency.rs  dry_run.rs  embedding.rs  error.rs  failing.rs  lib.rs  openai_embed.rs  pricing.rs  provider.rs  rate_limit.rs  resolve.rs  stable_sampling.rs  voyage.rs
crates/callimachus-mcp/: Cargo.toml
crates/callimachus-mcp/src/: dispatch.rs  lib.rs  server.rs  tools.rs
docs/: abm-testing.md  adapting-storage.md  apple-docs-corpus.md  architecture.md  at-scale.md  codebase-analysis.md  glossary.md  llm-complement.md  mcp-tools.md  query-patterns.md  vocabulary-primer.md
docs/plans/: apple-docs-corpus-v2.md  callimachus-standalone.md  diff-based-history-walker.md  history-walk-phase6.md  honest-provenance-implementation.md  honest-provenance-pr1.md  honest-provenance-pr2.md  honest-provenance-pr3.md  honest-provenance-pr4.md  honest-provenance-pr5.md  honest-provenance.md  multi-model-artifact-storage.md  phase-02-llm-providers.md  phase-03-indexing-pipeline.md  phase-04-mcp-tools.md  phase-05-corrections-inspect.md  phase-06-reindex-watcher.md  phase-07-code-adapter.md  phase-08-http-distribution.md  phase-09-wiki-embeddings.md  phase-10-storage-abstraction.md  phase-11-collection.md  phase-11-library.md  stage-0-change-detection.md  three-pinakes-comparison.md  tiered-model-selection.md
scripts/: build-apple-docs-macos-26.sh  compare-pinakes.py  fetch-apple-docs.py  forward-walk.sh  run-webster-abm.sh
