[workspace]
members = [
    "crates/callimachus-core",
    "crates/callimachus-llm",
    "crates/callimachus-mcp",
    "crates/callimachus-http",
    "crates/callimachus-cli",
    "crates/adapters/callimachus-adapter-book",
    "crates/adapters/callimachus-adapter-code",
    "crates/adapters/callimachus-adapter-wiki",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hammer <hammer@carefeed.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/thehammer/callimachus"

[workspace.dependencies]
# Core
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"

# CLI
clap = { version = "4", features = ["derive", "color", "env"] }

# Async (Phase 2+)
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Utilities
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem watching + walking
notify = { version = "6", features = ["macos_kqueue"] }
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
