[package]
name = "callimachus-core"
description = "Domain types, storage layer, and indexing engine for Callimachus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
callimachus-llm = { path = "../callimachus-llm" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
sha2.workspace = true
hex.workspace = true
bytemuck = "1"
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
notify.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
