[package]
name = "callimachus-llm"
description = "LLM provider trait and implementations for Callimachus (Anthropic API + Claude Code subscription)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
tempfile = "3"
