[package]
name = "callimachus-mcp"
description = "MCP stdio server for Callimachus — exposes all tools over JSON-RPC"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
callimachus-core = { path = "../callimachus-core" }
anyhow.workspace = true
once_cell = "1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
