[package]
name = "callimachus-adapter-book"
description = "Callimachus adapter for books — EPUB, Markdown, and plain text"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
callimachus-core = { path = "../../callimachus-core" }
callimachus-llm = { path = "../../callimachus-llm" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
epub = "2"
html2text = "0.6"
pulldown-cmark = "0.12"
regex = "1"
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true }
callimachus-llm = { path = "../../callimachus-llm" }
