[package]
name = "callimachus-adapter-docs"
description = "Callimachus adapter for Apple DocC JSON documentation — structured edges, rich entity taxonomy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
callimachus-core = { path = "../../callimachus-core" }
callimachus-llm = { path = "../../callimachus-llm" }
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
